--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 }
 
 a {
-  color: black;
   text-decoration: none;
 }
 
@@ -40,7 +39,6 @@ p {
 
 .welcome {
   display: flex;
-  text-align: center;
   justify-content: center;
   align-items: center;
 }
@@ -54,7 +52,7 @@ p {
 
 .welcome-left {
   width: 600px;
-  padding-left: 50px;
+  padding-left: 100px;
 }
 
 .welcome-right {
@@ -71,25 +69,20 @@ p {
 
 h1 {
   padding: 20px;
-  margin: 0 auto;
   font-family: SF Pro Rounded;
   font-weight: 600;
   font-size: 36px;
   line-height: 100%;
   letter-spacing: 1%;
-  text-align: center;
-  vertical-align: middle;
 }
 
 .p {
-  width: 350px;
+  width: 410px;
   padding: 20px;
-  margin: 0 auto;
   font-family: SF Pro Display;
   font-weight: 400;
   font-size: 20px;
   line-height: 160%;
-  align-items: center;
   letter-spacing: 1%;
   vertical-align: middle;
 }
@@ -105,11 +98,35 @@ h1 {
 }
 
 .aa {
+  display: flex;
+  justify-content: end;
+  margin-right: 100px;
   color: rgba(30, 74, 233, 1);
   font-family: Roboto;
   font-weight: 400;
   font-size: 16px;
   line-height: 100%;
+  letter-spacing: 1%;
+  vertical-align: middle;
+}
+
+.ppp {
+  margin-right: 100px;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  letter-spacing: 1%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.aaa {
+  color: blue;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
   letter-spacing: 1%;
   text-align: center;
   vertical-align: middle;
@@ -122,9 +139,6 @@ h1 {
   border-radius: 12px;
   padding-top: 16px;
   padding-bottom: 16px;
-}
-
-.buttons {
 }
 
 .button-social {
